# quickq

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish-docs.yml
analytics/: index.html
architecture/: index.html
authoring/: index.html
database/data-model/: index.html
database/olap/: index.html
database/oltp/: index.html
database/source/: olap_omop.dbml  oltp_instrument.dbml  oltp_provenance.dbml  oltp_vocabulary.dbml
demo/data_dicts/: phq9_data_dict.csv  phq9_data_dict.md  phq9_render.md  prenatal_visits_data_dict.csv  prenatal_visits_data_dict.md  prenatal_visits_render.md
design_decisions/: index.html
docs/: analytics.md  architecture.md  authoring.md  design_decisions.md  fhir.md  index.md  philosophy.md  tutorial.md  why_quickq.md
docs/_drafts/: multi-site.md
docs/articles/: survey-data-challenges.md
docs/database/: data-model.md  olap.md  oltp.md
docs/internal/: audit-workflow.md  external-audit-2026-05-14.md  renderer-coverage.md  user-level-abstractions.md
docs/reference/: analysis-recipes-r.md  analysis-recipes.md  compliance.md  example-gout-checkin.md  example-phq9.md  example-prapare-data-dict.md  federated.md  multi-site.md  omop.md  query-patterns.md  question-types.md  seed.md  skip-logic-qc.md  third-party-renderers.md  versioning.md
docs/tutorials/: analytics.md  authoring.md  collect.md  data-quality.md  end-to-end.md  share.md  (+1 more)
examples/: health_intake_demo.yaml
fhir/: index.html
hooks/: marimo_export.py
philosophy/: index.html
quickq/: administration.py  authoring.py  cli.py  compliance.py  config.py  export_metadata.py  export_parquet.py  fair_check.py  federated.py  fork.py  library_loader.py  loader.py  merge.py  models.py  olap_schema.py  parser_fhir.py  parser_fhir_response.py  preview.py  pseudonymize.py  renderer_fhir.py  renderer_md.py  renderer_pdf.py  renderer_questionnaire.py  scaffold.py  schema.py  seed.py  versioning.py
scripts/: build_notebook_data.py  generate_demo.py  generate_fixtures.py  smoke_test_notebooks.py
search/: search_index.json
sql/: olap_schema.sql  oltp_schema.sql
tests/: test_administration.py  test_analytics_cmd.py  test_authoring.py  test_compliance.py  test_config.py  test_e2e_lhcforms.py  test_export_metadata.py  test_export_parquet.py  test_fair_check.py  test_federated.py  test_fhir_export.py  test_fhir_import.py  test_fhir_response_import.py  test_fork.py  test_library.py  test_list_commands.py  test_loader.py  test_merge.py  test_preview.py  test_pseudonymize.py  test_recipe_blocks.py  test_refresh.py  test_renderer_questionnaire.py  test_repeating_group.py  test_repeating_nested_boundary.py  test_report.py  test_scaffold.py  test_schema.py  test_seed.py  test_seed_skip_extensions.py  test_skip_rule_extensions.py  test_ussg_fht.py  test_versioning.py  test_walkthrough_e2e.py
tutorial/: index.html
(+66 files in other folders)
