[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickq"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "duckdb>=0.10",
    "playwright>=1.58.0",
    "pyyaml>=6.0",
]

[project.scripts]
quickq = "quickq.cli:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pytest>=8.0",
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests that require network access and a browser (run with -m e2e)",
]
