[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quickq"
version = "0.1.0"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "click>=8.0",
    "rich-click>=1.8.0",
    "duckdb>=0.10",
    "pyyaml>=6.0",
    "sqlglot>=30.6.0",
]

[project.scripts]
quickq = "quickq.cli:main"

[project.optional-dependencies]
pdf = [
    "markdown>=3.10.2",
    "weasyprint>=68.1",
]
# `quickq[serve]` pulls in quickq-forms (the FHIR delivery server). When
# quickq-forms is published to PyPI, the URL spec below can be replaced with
# a plain `quickq-forms` requirement.
serve = [
    "quickq-forms @ git+https://github.com/quickq-io/quickq-forms.git",
]

[tool.setuptools]
packages = ["quickq"]

[tool.setuptools.package-data]
quickq = ["sql/*.sql", "library/*.yaml"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "playwright>=1.58.0",
    "pytest>=8.0",
    "pytest-playwright>=0.7.2",
]

[tool.hatch.build.targets.wheel]
packages = ["quickq"]

[tool.pytest.ini_options]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests that build real wheels, boot subprocesses, or require network/browser (run with -m e2e)",
]
